tests/snapshots/type_resolver__type_resolver@19_valid_returns.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/19_valid_returns.lang
---
Ok: ~
