tests/snapshots/type_resolver__type_resolver@20_valid_loops_and_blocks.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/20_valid_loops_and_blocks.lang
---
Ok: ~
