tests/snapshots/type_resolver__type_resolver@21_valid_scoping.lang-2.snap
---
source: tests/type_resolver.rs
expression: hir
input_file: tests/type_resolver/21_valid_scoping.lang
---
funs:
  main:
    return_ty:
      kind: Void
    body:
      - kind: Let
        name: x
        ty:
          kind: Num
        expr:
          kind: Num
          value: 10
      - kind: Block
        body:
          - kind: Let
            name: x
            ty:
              kind: Num
            expr:
              kind: Num
              value: 20
          - kind: Let
            name: y
            ty:
              kind: Num
            expr:
              kind: Var
              name: x
      - kind: Let
        name: z
        ty:
          kind: Num
        expr:
          kind: Var
          name: x
      - kind: If
        cond:
          kind: Bool
          value: true
        body:
          - kind: Let
            name: x
            ty:
              kind: Bool
            expr:
              kind: Bool
              value: false
          - kind: Let
            name: a
            ty:
              kind: Bool
            expr:
              kind: Var
              name: x
        else: ~
      - kind: Loop
        body:
          - kind: Let
            name: x
            ty:
              kind: Num
            expr:
              kind: Num
              value: 30
          - kind: Let
            name: b
            ty:
              kind: Num
            expr:
              kind: Binary
              op: Add
              lhs:
                kind: Var
                name: x
              rhs:
                kind: Num
                value: 5
          - kind: Break
      - kind: Let
        name: final
        ty:
          kind: Num
        expr:
          kind: Var
          name: x
