tests/snapshots/type_resolver__type_resolver@21_valid_scoping.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/21_valid_scoping.lang
---
Ok: ~
