tests/snapshots/type_resolver__type_resolver@22_valid_complex.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/22_valid_complex.lang
---
Ok: ~
