tests/snapshots/type_resolver__type_resolver@23_type_mismatch_bool_to_num.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/23_type_mismatch_bool_to_num.lang
---
Err:
  TypeMismatch:
    expected:
      kind: Num
    found:
      kind: Bool
