tests/snapshots/type_resolver__type_resolver@24_undefined_var_nested.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/24_undefined_var_nested.lang
---
Err:
  UndefinedVar:
    name: z
