tests/snapshots/type_resolver__type_resolver@25_invalid_comparison_on_bool.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/25_invalid_comparison_on_bool.lang
---
Err:
  InvalidBinaryOp:
    op: Lesser
    lhs:
      kind: Bool
    rhs:
      kind: Bool
