tests/snapshots/type_resolver__type_resolver@26_multiple_errors.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/26_multiple_errors.lang
---
Err:
  TypeMismatch:
    expected:
      kind: Num
    found:
      kind: Bool
