tests/snapshots/type_resolver__type_resolver@27_valid_type_inference.lang.snap
---
source: tests/type_resolver.rs
expression: result
input_file: tests/type_resolver/27_valid_type_inference.lang
---
Ok: ~
